* Fixed CryptoFrame and StreamFrame data access. * Fixed/simplified CryptoFlusher split entry logic. * Made Packet and Frame closeable for better lifecycle management. * Fixed FrameStream implementation.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>