@@ -15,7 +15,9 @@ package org.eclipse.jetty.quic.common.frames;
 
 import java.util.PriorityQueue;
 import java.util.Queue;
+import java.util.function.Consumer;
 
+import org.eclipse.jetty.io.RetainableByteBuffer;
 import org.eclipse.jetty.quic.api.frames.Frame;
 import org.eclipse.jetty.util.TypeUtil;
 import org.slf4j.Logger;
@@ -27,59 +29,92 @@ import org.slf4j.LoggerFactory;
 /// CRYPTO and STREAM frames may arrive out-of-order,
 /// within QUIC packets, and this class is responsible
 /// for reordering them before delivering them to the
-/// application via the [Frame.Listener].
+/// application via the provided listener.
 public class FrameStream
 {
     private static final Logger LOG = LoggerFactory.getLogger(FrameStream.class);
 
-    private final Queue<Frame.WithOffset> queue = new PriorityQueue<>();
-    private final Frame.Listener listener;
+    private final Queue<Frame.WithData> frames = new PriorityQueue<>();
+    private final Consumer<Frame.WithData> listener;
     private long offset;
 
-    public FrameStream(Frame.Listener listener)
+    public FrameStream(Consumer<Frame.WithData> listener)
     {
         this.listener = listener;
     }
 
-    public void offer(Frame.WithOffset frame)
+    public void offer(Frame.WithData frame)
     {
-        // TODO: must handle retransmissions, where a duplicate frame is received
-        //  but it is already in the queue (it will have an existing offset).
-
-        queue.offer(frame);
+        // Retain because it is stored for later use.
+        // When the frame is removed from the queue,
+        // it will be closed and therefore released.
+        frame.accept(RetainableByteBuffer::retain);
+        frames.offer(frame);
 
         if (LOG.isDebugEnabled())
             LOG.debug("offered {} on {}", frame, this);
 
         while (true)
         {
-            Frame.WithOffset candidate = queue.peek();
+            Frame.WithData candidate = frames.peek();
             if (candidate == null)
-                break;
-
-            if (offset != candidate.offset())
             {
                 if (LOG.isDebugEnabled())
-                    LOG.debug("stalling out-of-order {} on {}", candidate, this);
-                break;
+                    LOG.debug("stalling, no data on {}", this);
+                return;
             }
 
-            // This frame is in order, deliver it.
-            queue.poll();
-            offset += candidate.length();
+            long offsetEnd = candidate.offset() + candidate.length();
+            if (offsetEnd <= offset)
+            {
+                if (LOG.isDebugEnabled())
+                    LOG.debug("discarding, data delivered {} on {}", candidate, this);
+                frames.poll();
+                candidate.close();
+                continue;
+            }
 
-            if (LOG.isDebugEnabled())
-                LOG.debug("notifying in-order {} on {}", candidate, this);
-
-            notifyFrame(candidate);
+            if (candidate.offset() < offset)
+            {
+                long length = offsetEnd - offset;
+                try (Frame.WithData newFrame = candidate.slice(offset, length))
+                {
+                    if (LOG.isDebugEnabled())
+                        LOG.debug("notifying, data slice {} on {}", newFrame, this);
+                    frames.poll();
+                    candidate.close();
+                    offset += length;
+                    notifyFrame(newFrame);
+                }
+            }
+            else if (candidate.offset() == offset)
+            {
+                if (LOG.isDebugEnabled())
+                    LOG.debug("notifying, data {} on {}", candidate, this);
+                frames.poll();
+                offset += candidate.length();
+                notifyFrame(candidate);
+                candidate.close();
+            }
+            else
+            {
+                if (LOG.isDebugEnabled())
+                    LOG.debug("stalling, data gap on {}", this);
+                return;
+            }
         }
     }
 
-    private void notifyFrame(Frame.WithOffset frame)
+    long offset()
+    {
+        return offset;
+    }
+
+    private void notifyFrame(Frame.WithData frame)
     {
         try
         {
-            listener.onFrame(frame);
+            listener.accept(frame);
         }
         catch (Throwable x)
         {
@@ -91,6 +126,6 @@ public class FrameStream
     @Override
     public String toString()
     {
-        return String.format("%s@%x[offset=%d,queue=%d]", TypeUtil.toShortName(getClass()), hashCode(), offset, queue.size());
+        return "%s@%x[offset=%d,queue=%s]".formatted(TypeUtil.toShortName(getClass()), hashCode(), offset, frames.size());
     }
 }
